feat: update user and authentication
